email has change

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>abdulwadudsuma@gmail.com</span>
+   					<span>abdulwadud844@gmail.com</span>
    				</li>
 
    			</ul> 
