--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 	   			<h1>I'm Abdul-Wadud Sumaila</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-End Developer</span>
 	   				<span>Full-Stack Developer</span>
 	   			</p>
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -88,7 +87,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>abdulwadud844@gmail.com</span>
+   					<span>abdulwadudsuma@gmail.com</span>
    				</li>
 
    			</ul> 
